services/workshop-colorservice.deploy.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: workshopcolorservice
spec:
  replicas: 20
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 4 
      maxUnavailable: 2 
  minReadySeconds: 5  
  template:
    metadata:
      labels:
        app: workshopcolorservice
        tier: demoapp
    spec:
      containers:
      - name: workshopcolorservice
        image: pblaas/workshop_colorservice:initial
        resources:
          requests:
            cpu: "100m"
            memory: "64Mi"
          limits:
            cpu: "150m"
            memory: "128Mi"
        ports:
        - containerPort: 80
        imagePullPolicy: Always
