services/workshop-nginx.deploy.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: workshopnginx
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 5 
      maxUnavailable: 2 
  minReadySeconds: 5  
  template:
    metadata:
      labels:
        app: workshopnginx
        tier: demoapp
    spec:
      containers:
      - name: workshopnginx
        image: pblaas/workshop_nginx:initial
        resources:
          requests:
            cpu: "100m"
            memory: "64Mi"
          limits:
            cpu: "150m"
            memory: "128Mi"
        ports:
        - containerPort: 80
        imagePullPolicy: Always
