services/workshop-nginx.service.yaml
kind: Service
apiVersion: v1
metadata:
  name: workshop-nginx 
spec:
  selector:
    app: workshopnginx 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
