services/workshop.ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: workshop-ingress
spec:
 rules:
   - host: workshop.k8s.proserve.nl
     http:
       paths:
         - path: /
           backend:
             serviceName: workshop_nginx 
             servicePort: 80
         - path: /colorservice
           backend:
             serviceName: workshop_colorservice
             servicePort: 80
